# bq_iceberg

./: .gitignore  GEMINI.md  README.md  bq_iceberg_analysis.ipynb  bq_iceberg_benchmark_50gb.ipynb  bq_iceberg_bigquery_dml.ipynb  bq_iceberg_deepdive.ipynb  bq_iceberg_deepdive_report.md  bq_iceberg_pyiceberg_duckdb.ipynb  bq_iceberg_spark_sql.ipynb  bq_iceberg_spark_sql_dml.ipynb  bq_lakehouse_catalog_demo.ipynb  pyproject.toml  requirements.txt
